Table Usuario {
  id_usuario integer [primary key, increment]
  email varchar(100) [unique, not null]
  senha varchar(100) [not null]
  data_cadastro date [default:  `now()`]
}

Table Cliente {
  id_cliente integer [primary key, increment]
  id_usuario integer [not null, unique]
  nome varchar(50) [not null]
  cpf varchar(11) [unique, not null]
  sexo char(1) [not null]
  data_nascimento date [not null]
  
}

Table Vendedor {
  id_vendedor integer [primary key, increment]
  id_usuario integer [not null, unique]
  nome_loja varchar(100) [not null]
  cnpj varchar(18) [unique, not null]
}

Table Endereco {
  id_endereco integer [primary key, increment]
  id_usuario integer [not null]
  estado char(2) [not null]
  cidade varchar(30) [not null]
  bairro varchar(100) [not null]
  cep varchar(8) [not null]
  rua varchar(100) [not null]
  complemento varchar(50) [not null]
  numero varchar(10) [not null]
}

Table Telefone {
  id_telefone integer [primary key, increment]
  id_usuario integer [not null]
  tipo varchar [not null, note: 'Celular, Trabalho, Fixo']
  numero varchar(15) [not null]
}

Table Produto {
  id_produto integer [primary key, increment]
  id_vendendor integer [not null]
  nome varchar(30) [not null]
  description varchar(100) [not null]
  categoria varchar [not null]
  preco_atual decimal(10,2) [not null]
}

Table Estoque {
  id_estoque integer [primary key, increment]
  id_produto varchar [not null, unique]
  quantidade_atual integer [not null, default: 0]

}

Table Pedido {
  id_pedido integer [primary key, increment]
  id_cliente integer [ not null]
  id_endereco_entrega  integer [not null]
  data_hora timestamp [default:  `now()`]
  status_geral varchar [note: "Pendente, Pago, Enviado, Entregue"]

}

Table Produto_Pedido {
  id integer [primary key, increment]
  id_pedido integer [not null]
  id_produto integer [not null]
  quantidade integer [not null]
  preco_unitario_pago decimal(10,2) [not null, note: 'Preço do produto no momento exata da compra']
}


Ref: "Cliente"."id_usuario" > "Usuario"."id_usuario"

Ref: "Vendedor"."id_usuario" > "Usuario"."id_usuario"

Ref: "Endereco"."id_usuario" > "Usuario"."id_usuario"

Ref: "Telefone"."id_usuario" > "Usuario"."id_usuario"  

Ref: "Produto"."id_vendendor" > "Vendedor"."id_vendedor"

Ref: "Estoque"."id_produto" - "Produto"."id_produto"

Ref: "Pedido"."id_cliente" > "Cliente"."id_cliente"

Ref: "Pedido"."id_endereco_entrega" > "Endereco"."id_endereco"

Ref: "Produto_Pedido"."id_pedido" > "Pedido"."id_pedido"

Ref: "Produto_Pedido"."id_produto" > "Produto"."id_produto"